After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723519 - rtsp-thread-pool leaks memory when sharing threads
rtsp-thread-pool leaks memory when sharing threads
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-03 08:33 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-02-25 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Unref threads which are shared from thread_stop (2.39 KB, patch)
2014-02-03 08:33 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-02-03 08:33:58 UTC
Created attachment 267925 [details] [review]
Unref threads which are shared from thread_stop

rtsp-thread-pool leaks memory when sharing threads.
Proposing a fix.
Comment 1 Wim Taymans 2014-02-04 13:48:29 UTC
commit 274d4b017fe4967b616e67f8dfe40fb30bfb053e
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Fri Jan 31 15:02:22 2014 +0100

    thread-pool: Unref reused threads in gst_rtsp_thread_stop()
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=723519