thread-pool: Unref reused threads in gst_rtsp_thread_stop()

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=723519